deployment-k8s/fb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facebook
  namespace: default
  labels:
    app: fb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fb
  template:
    metadata:
      labels:
        app: fb
    spec:
      containers:
        - name: facebook-deploy
          image: asia-south1-docker.pkg.dev/jaatbreak/facebook-repo/fb_new:1 # Replace with your production image
          ports:
            - containerPort: 80
