deployment-k8s/fb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: facebook-service
  namespace: default
  labels:
    app: fb
spec:
  type: ClusterIP
  selector:
    app: fb  # Match the Pod label from the Deployment
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443  # Ensure your container is also listening on port 443 if needed
