deployment-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facebook-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx  # Specify the Ingress class name here
  rules:
    - host: chanchaltech.in.net  # Replace with your domain name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: facebook-service
                port:
                  number: 80
  tls:
    - hosts:
        - chanchaltech.in.net  # Replace with your domain name
      secretName: facebook-tls
